Updated saving and loading to work with player upgrades and CC_CourseData.
Fixed bug where cardForegroundImageView image would stay after card moved.

JavaDocs.